equalizer: Fix -Wincompatible-pointer-types warning

This is caused by the new type propagation for g_object_ref.

https://bugzilla.gnome.org/show_bug.cgi?id=791494